--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 # created by virtualenv automatically
 /venv/
-/.idea/
+/**/.*  # ignore all dotted files
+/**/.*/ # ignore all dotted folders
+!/.gitignore  # except `gitignore` :)
